[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pumpkin/pumpkin.png" type="Texture" id=1]
[ext_resource path="res://Pumpkin/Pumpkin.gd" type="Script" id=2]
[ext_resource path="res://OutlineShader.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true
shader_param/on = false

[sub_resource type="CapsuleShape2D" id=5]
radius = 18.0
height = 14.0

[sub_resource type="CircleShape2D" id=4]
radius = 42.2966

[node name="Pumpkin" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 0.729653, 0.729653 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_Pumpkin_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pumpkin_mouse_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
